[package]
name = "SuperBruPool"
version = "0.0.1"
edition = "2021"


[dependencies]

tari_wallet_daemon_client={path="D:/projects/tari-dan//clients/wallet_daemon_client"}
tari_engine_types={path="D:/projects/tari-dan//dan_layer/engine_types"}
tari_template_lib={path="D:/projects/tari-dan//dan_layer/template_lib"}
tari_transaction ={path="D:/projects/tari-dan//dan_layer/transaction"}

tari_utilities ="*"


clap = { version = "4", features = ["derive", "env"] }
multiaddr = "0.14.0"
reqwest={ version="*", features=["json"]}
serde_json="*"
tokio ={version="1", features = ["full"] }
